name:                monad-extras
version:             0.1.0.0
synopsis:            Some general utility functions for working with monads
-- description:         
homepage:            http://github.com/jwiegley/monad-extras
license:             BSD3
license-file:        LICENSE
author:              John Wiegley, Chris Done
maintainer:          johnw@fpcomplete.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Control.Monad.Extra
  build-depends:       base